# unreal-mcpython

./: .gitignore  README.md  UnrealMCPython.uplugin
.github/: FUNDING.yml
.github/workflows/: release.yml
Content/Python/: actor_actions.py  asset_actions.py  editor_actions.py  material_actions.py  mcp_unreal_actions.py  util_actions.py
Content/Python/UnrealMCPython/: actor_actions.py  asset_actions.py  behavior_tree_actions.py  editor_actions.py  material_actions.py  util_actions.py
Docs/: unreal_mcpython_plugin_en.md
MCPServer/: server.py  setup.py  test_client.py
MCPServer/src/: main.py
MCPServer/src/unreal_mcp/: core.py  main.py  pyproject.toml  server.py
MCPServer/src/unreal_mcp/tool_routers/: actor_router.py  editor_router.py  material_router.py  util_router.py
MCPServer/tool_routers/: asset_router.py  util_router.py
Source/UnrealMCPython/: UnrealMCPython.Build.cs
Source/UnrealMCPython/Private/: MCPythonHelper.cpp  MCPythonTcpServer.cpp  UnrealMCPython.cpp
Source/UnrealMCPython/Public/: MCPythonHelper.h  MCPythonTcpServer.h  UnrealMCPython.h
mcp-server/: pyproject.toml  validate_tools.py
mcp-server/src/unreal_mcp/: core.py  main.py  server.py
mcp-server/src/unreal_mcp/tool_routers/: actor_router.py  asset_router.py  behavior_tree_router.py  editor_router.py  game_router.py  util_router.py
src/unreal_mcp/: core.py
src/unreal_mcp/tool_routers/: __init__.py  material_router.py
