[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unrealmcp"
version = "1.0.0"
description = "MCP Server for Unreal Engine integration"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastmcp",
]

[project.scripts]
unrealmcp = "MCPServer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
